[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.52549, 0.541176, 0.921569, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.5, -0.747818, 0, 0, 0, 0, 480.9, 2.85219, 0, 0, 0, 0, 480.9, 719.262, 0, 0, 0, 0, -0.573959, 718.262, 0, 0, 0, 0, -0.5, -0.747818 )
}

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]
Mob = ExtResource( 2 )

[node name="Panel" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 1 )
_sections_unfolded = [ "custom_styles" ]

[node name="Scenes" parent="." index="1" instance=ExtResource( 3 )]

[node name="ScoreTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="StartTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="StartPosition" type="Position2D" parent="." index="4"]

position = Vector2( 240, 450 )
_sections_unfolded = [ "Transform" ]

[node name="MobPath" type="Path2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 0.579958, -5.96046e-08 )
scale = Vector2( 2.01045, 1 )
curve = SubResource( 2 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath" index="0"]

position = Vector2( -0.5, -0.747818 )
rotation = 0.00747806
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="HUD" parent="." index="6" instance=ExtResource( 4 )]

[node name="ThoughtTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="IncreaseSpeedTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="SceneTimer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 60.0
one_shot = false
autostart = false

[node name="QuestionTimer" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]

[connection signal="begin_round" from="HUD" to="." method="begin_round"]

[connection signal="start_game" from="HUD" to="." method="new_game"]

[connection signal="timeout" from="ThoughtTimer" to="." method="_on_ThoughtTimer_timeout"]

[connection signal="timeout" from="IncreaseSpeedTimer" to="." method="_on_IncreaseSpeedTimer_timeout"]

[connection signal="timeout" from="SceneTimer" to="." method="_on_SceneTimer_timeout"]

[connection signal="timeout" from="QuestionTimer" to="." method="_on_QuestionTimer_timeout"]


